--- a/styles/Product.module.scss
+++ b/styles/Product.module.scss
@@ -1,5 +1,16 @@
 .productSection {
   display: flex;
   flex-wrap: wrap;
+  justify-content: end;
   // align-items: flex-start;
+}
+
+.productListing {
+  width: 80%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  @media screen and (max-width: 480px) {
+    width: 100%;
+  }
 }
