--- a/components/Footer/footer.module.scss
+++ b/components/Footer/footer.module.scss
@@ -9,3 +9,10 @@
   padding: 16px;
   background: $grey-color;
 }
+
+@media screen and (max-width: 480px) {
+  .footer {
+    font-size: 10px;
+    padding: 8px;
+  }
+}
