login and singup added with some structure enhancement

--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -24,7 +24,7 @@
       @include navTexts;
       li {
         list-style: none;
-        padding: 16px;
+        padding: 4px 16px;
         a {
           text-decoration: none;
         }
