--- a/styles/variables.module.scss
+++ b/styles/variables.module.scss
@@ -4,6 +4,7 @@ $shadow-color: #ebebeb;
 $nav-text-color: #7f7f7f;
 $white-color: #ffffff;
 $black-color: #000000;
+$green-color: #50dae4;
 
 $fz-12: 12px;
 
@@ -15,4 +16,5 @@ $fz-12: 12px;
   textColor: $nav-text-color;
   whiteColor: $white-color;
   blackColor: $black-color;
+  greenColor: $green-color;
 }
