added add to cart container html/css

--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -48,6 +48,7 @@
       background-color: $grey-color;
       padding: 0px 16px;
       align-items: center;
+      cursor: pointer;
       p {
         margin: 0px;
         padding: 8px;
